welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:7: error: value ||! is not a member of Boolean
while (!estSurBiscuit()||!estSurOrange()){avance();}
                       ^